--- a/application.css
+++ b/application.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('images/Market.jpg');
+    background-image: url('images/Blend.png');
     background-position: center;
     height: 100vh;
     background-repeat: no-repeat;
@@ -7,4 +7,8 @@ body {
     background-size: 100% 100%;
     font-family: "Lucida Console", "Courier New", monospace;
     color: black;
+}
+
+li {
+    list-style-type: none;
 }
