--- a/application.css
+++ b/application.css
@@ -12,7 +12,6 @@ body {
 ul {
     list-style-type: none;
     padding: 10;
-    margin: 25;
     position: relative;
     align-items: center;
   }
@@ -26,4 +25,15 @@ li {
 
 span {
     align-content: center;
+}
+
+.hidden {
+    display: none;
+}
+
+.cart-display {
+    width: 30%;
+    margin-left: 65%;
+    margin-right: 30%;
+    margin-bottom: 5%;
 }
