name for cart and checkout clears

--- a/application.css
+++ b/application.css
@@ -9,23 +9,6 @@ body {
     color: black;
 }
 
-ul {
-    list-style-type: none;
-    padding: 10;
-    position: relative;
-    align-items: center;
-  }
-
-li {
-    list-style-type: none;
-    position: relative;
-    align-content: space-around;
-    
-}
-
-span {
-    align-content: center;
-}
 
 .hidden {
     display: none;
@@ -39,5 +22,11 @@ span {
 }
 
 #cart-side-page {
-    align-content: right;
+    margin: 20px 0;
+    float: right;
+    width: 350px;
+    position: relative;
+    border-radius: 3px;
+    padding: 20px;
 }
+
