--- a/application.css
+++ b/application.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     background-image: url('images/Blend.png');
     background-position: center;
     height: 100vh;
@@ -7,7 +7,7 @@ body {
     background-size: 100% 100%;
     font-family: "Lucida Console", "Courier New", monospace;
     color: black;
-}
+} */
 
 
 .hidden {
